--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+/**
+ * Drag and Drop Basic
+ */
 
+let dragSource = document.querySelector('#drag-source')
+dragSource.addEventListener('dragstart', dragStart)
+
+let dropTarget = document.querySelector('#target-container')
+dropTarget.addEventListener('drop', dropped)
+dropTarget.addEventListener('dragenter', cancelDefault)
+dropTarget.addEventListener('dragover', cancelDefault)
+
+function cancelDefault (e) {
+  e.preventDefault()
+  e.stopPropagation()
+  return false
+}
+
+function dragStart (e) {
+  console.log('dragStart')
+  e.dataTransfer.setData('text/plain', e.target.id)
+}
+
+function dropped (e) {
+  console.log('dropped')
+  cancelDefault(e)
+  let id = e.dataTransfer.getData('text/plain')
+  e.target.appendChild(document.querySelector('#' + id))
+}
+// End of Drag and Drop Basic
