--- a/index.html
+++ b/index.html
@@ -4,3 +4,47 @@
   </div>
   <div id="target-container"></div>
 </div> 
+
+<script>
+  /**
+ * Drag and Drop multiple elements in multiple sources 
+**/
+
+let sourceContainerId = ''
+
+// Allow multiple draggable items
+let dragSources = document.querySelectorAll('[draggable="true"]')
+dragSources.forEach(dragSource => {
+  dragSource.addEventListener('dragstart', dragStart)
+})
+
+// Allow multiple dropped targets
+let dropTargets = document.querySelectorAll('[data-role="drag-drop-container"]')
+dropTargets.forEach(dropTarget => {
+  dropTarget.addEventListener('drop', dropped)
+  dropTarget.addEventListener('dragenter', cancelDefault)
+  dropTarget.addEventListener('dragover', cancelDefault)
+})
+
+function cancelDefault (e) {
+  e.preventDefault()
+  e.stopPropagation()
+  return false
+}
+
+function dragStart (e) {
+  e.dataTransfer.setData('text/plain', e.target.id)
+  sourceContainerId = this.parentElement.id
+  console.log('sourceContainerId', sourceContainerId)
+}
+
+function dropped (e) {
+  // execute function only when target container is different from source container
+  if (this.id !== sourceContainerId) {
+    cancelDefault(e)
+    let id = e.dataTransfer.getData('text/plain')
+    e.target.appendChild(document.querySelector('#' + id))
+  }
+}
+// End of Drag and Drop Basic
+ </script>
