--- a/index.html
+++ b/index.html
@@ -1,50 +1,35 @@
-<div id="drag-drop-basic">
-  <div id="source-container">
-    <div id="drag-source" draggable="true"></div>
+<div class="container">
+  <h3>Drag and Sort :</h3>
+  <div class="drag-sort-enable">
+    <p class="drag-sort-enable"><span> You</span>
+    <span> can</span>
+    <span> rearrange</span>
+    <span> any</span>
+    <span> elements</span>
+    <span> within</span>
+    <span> a</span>
+    <span> parent</span>
+    <span> node</span>
+    <span> with</span>
+    <span> class</span>
+    <span> 'drag-sort-enable'</span>
+    <span> or</span>
+    <span> anything</span>
+    <span> with</span>
+    <span> event</span>
+    <span> function</span>
+    <span> handleDrag()</span>
+    <span> and</span>
+    <span> handleDrop()</span>.
+    <span> You can also rearrange this text.</span></p>
+    <p><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> Doesn't work on mobile devices.<p>
   </div>
-  <div id="target-container"></div>
-</div> 
-
-<script>
-  /**
- * Drag and Drop multiple elements in multiple sources 
-**/
-
-let sourceContainerId = ''
-
-// Allow multiple draggable items
-let dragSources = document.querySelectorAll('[draggable="true"]')
-dragSources.forEach(dragSource => {
-  dragSource.addEventListener('dragstart', dragStart)
-})
-
-// Allow multiple dropped targets
-let dropTargets = document.querySelectorAll('[data-role="drag-drop-container"]')
-dropTargets.forEach(dropTarget => {
-  dropTarget.addEventListener('drop', dropped)
-  dropTarget.addEventListener('dragenter', cancelDefault)
-  dropTarget.addEventListener('dragover', cancelDefault)
-})
-
-function cancelDefault (e) {
-  e.preventDefault()
-  e.stopPropagation()
-  return false
-}
-
-function dragStart (e) {
-  e.dataTransfer.setData('text/plain', e.target.id)
-  sourceContainerId = this.parentElement.id
-  console.log('sourceContainerId', sourceContainerId)
-}
-
-function dropped (e) {
-  // execute function only when target container is different from source container
-  if (this.id !== sourceContainerId) {
-    cancelDefault(e)
-    let id = e.dataTransfer.getData('text/plain')
-    e.target.appendChild(document.querySelector('#' + id))
-  }
-}
-// End of Drag and Drop Basic
- </script>
+  <hr>
+  <ul class="drag-sort-enable">
+    <li>Application</li>
+    <li>Blank</li>
+    <li>Class</li>
+    <li>Data</li>
+    <li>Element</li>
+  </ul>
+</div>
