--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@ span.drag-sort-active {
     <li>Class</li>
     <li>Data</li>
     <li>Element</li>
+    <li> 
+    <input type="text" id="qq" name="qq"><br><br>
+      <input type="text" id="ww" name="ww"><br><br>
+    </li>
   </ul>
 </div>
 <script src='index.js'> </script>
