--- a/index.html
+++ b/index.html
@@ -1,86 +1,74 @@
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
+<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+<script type="text/javascript" src="http://www.pureexample.com/js/lib/jquery.ui.touch-punch.min.js"></script>
+ 
+ 
+<!-- CSS -->
 <style type="text/css">
-html,
-body {
-  height: 100%;
+.square {
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+    border: 1px solid black;
+    margin-bottom: 5px;
+    margin-left: 5px;
+    text-align: center;
+    float: left;
+    background-color: lightblue;
+    cursor: pointer;
+    font-weight: bold;
 }
-
-.container {
-  margin: 20px auto 0;
-  max-width: 500px;
-  word-wrap:break-word
-}
-
-* {
-  box-sizing: border-box;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  margin: 5px 0;
-  padding: 0 20px;
-  height: 40px;
-  line-height: 40px;
-  border-radius: 3px;
-  background: #136a8a;
-background: -webkit-linear-gradient(to right, #267871, #136a8a);
-background: linear-gradient(to right, #267871, #136a8a);
-  color: #fff;
-  list-style: none;
-}
-
-li.drag-sort-active {
-  background: transparent;
-  color: transparent;
-  border: 1px solid #4ca1af;
-}
-
-span.drag-sort-active {
-  background: transparent;
-  color: transparent;
+ 
+.squaredotted {
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+    border: 1px dotted gray;
+    margin-bottom: 5px;
+    margin-left: 5px;
+    text-align: center;
+    float: left;
+    color: gray;
+    background-color: lightgray;
 }
 </style>
-
-<div class="container">
-  <h3>Drag and Sort :</h3>
-  <div class="drag-sort-enable">
-    <p class="drag-sort-enable"><span> You</span>
-    <span> can</span>
-    <span> rearrange</span>
-    <span> any</span>
-    <span> elements</span>
-    <span> within</span>
-    <span> a</span>
-    <span> parent</span>
-    <span> node</span>
-    <span> with</span>
-    <span> class</span>
-    <span> 'drag-sort-enable'</span>
-    <span> or</span>
-    <span> anything</span>
-    <span> with</span>
-    <span> event</span>
-    <span> function</span>
-    <span> handleDrag()</span>
-    <span> and</span>
-    <span> handleDrop()</span>.
-    <span> You can also rearrange this text.</span></p>
-    <p><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> Doesn't work on mobile devices.<p>
-  </div>
-  <hr>
-  <ul class="drag-sort-enable">
-    <li>Application</li>
-    <li>Blank</li>
-    <li>Class</li>
-    <li>Data</li>
-    <li>Element</li>
-    <li> 
-    <input type="text" id="qq" name="qq"><br><br>
-      <input type="text" id="ww" name="ww"><br><br>
-    </li>
-  </ul>
+ 
+ 
+<!-- Javascript -->
+<script>
+$(function () {
+        $(".square").draggable({
+                snap: ".squaredotted",
+                snapMode: "inner"
+        });
+});
+</script>
+ 
+<!-- HTML -->
+<div style="float:left">
+    <div class="square">1</div>
+    <div class="square">2</div>
+    <div class="square">3</div>
+    <div style="clear:both"></div>
+    <div class="square">4</div>
+    <div class="square">5</div>
+    <div class="square">6</div>
+    <div style="clear:both"></div>
+    <div class="square">7</div>
+    <div class="square">8</div>
+    <div class="square">9</div>
 </div>
-<script src='index.js'> </script>
+<div style="float:left;margin-left:50px;">
+    <div class="squaredotted">1</div>
+    <div class="squaredotted">2</div>
+    <div class="squaredotted">3</div>
+    <div style="clear:both"></div>
+    <div class="squaredotted">4</div>
+    <div class="squaredotted">5</div>
+    <div class="squaredotted">6</div>
+    <div style="clear:both"></div>
+    <div class="squaredotted">7</div>
+    <div class="squaredotted">8</div>
+    <div class="squaredotted">9</div>
+</div>
