--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
-	<body>
+	<head>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
 		<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
 		<script type="text/javascript" src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 		<script type="text/javascript" src="http://www.pureexample.com/js/lib/jquery.ui.touch-punch.min.js"></script>
-
-
+	
 		<!-- CSS -->
 		<style type="text/css">
 		.square {
@@ -45,7 +44,8 @@
 			});
 		});
 		</script>
-
+	</head>
+	<body>
 		<!-- HTML -->
 		<div style="float:left">
 		    <div class="square">1</div>
