--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 	<body>
 		<!-- HTML -->
 		<div style="float:left">
-		    <div class="square">1</div>
+		    <div class="square">
+		      <input> qq</input>
+		      <input> qqq</input>
+		    </div>
 		    <div class="square">2</div>
 		    <div class="square">3</div>
 		    <div style="clear:both"></div>
