--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 		<!-- HTML -->
 		<div style="float:left">
 		    <div class="square">
-		      <input> qq</input>
-		      <input> qqq</input>
+		      <input></input> <input></input>
 		    </div>
 		    <div class="square">2</div>
 		    <div class="square">3</div>
