--- a/index.html
+++ b/index.html
@@ -26,54 +26,218 @@
 		    height: 80px;
 		    line-height: 80px;
 		    border: 1px dotted gray;
-		    margin-bottom: 5px;
-		    margin-left: 5px;
+		    margin-bottom: 30px;
+		    margin-left: 30px;
 		    text-align: center;
 		    float: left;
 		    color: gray;
 		    background-color: lightgray;
 		}
 		</style>
+		<style type="text/css">
+		.name {
+		    width: 70px;
+		    margin-top: 5px;
+		    margin-bottom: 5px;
+		}
+		.weigth {
+		    width: 70px;
+		    margin-top: 5px;
+		    margin-bottom: 5px;
+		}		
+		</style>
 
+		<style type="text/css">
+		.name {
+		    width: 70px;
+		    margin-top: 5px;
+		    margin-bottom: 5px;
+		}
+		.weigth {
+		    type: "number";
+		    width: 70px;
+		    margin-top: 5px;
+		    margin-bottom: 5px;
+		}		
+		</style>
 		<!-- Javascript -->
 		<script>
 		$(function () {
 			$(".square").draggable({
 				snap: ".squaredotted",
-				snapMode: "inner"
+				snapMode: "inner",
+				stop: function(event, ui) { 
+					/* Get the possible snap targets: */
+					var snapped = $(this).data('ui-draggable').snapElements;
+
+					/* Pull out only the snap targets that are "snapping": */
+					var snappedTo = $.map(snapped, function(element) {
+					    return element.snapping ? element.item : null;
+					});
+
+					/* Display the results: */
+					var result= '';
+					$.each(snappedTo, function(idx, item) {
+					    result += $(item).text() + ", ";
+					});
+					var snppedelemt = '';					
+					if(result == "1,2,3,") {
+         					snppedelemt = "1";			
+         				}else if(result == "1,2,3,4,"){
+							snppedelemt = "2";	
+						}else if(result == "1,2,3,4,5,"){
+							snppedelemt = "3";	
+						}else if(result == "1,2,3,4,5,6,"){
+							snppedelemt = "4";	
+						}else if(result == "3,4,5,6,7,"){
+							snppedelemt = "5";	
+						}else if(result == "3,4,5,6,7,8,"){
+							snppedelemt = "6";	
+						}else if(result == "5,6,7,8,9,"){
+							snppedelemt = "7";	
+						}else if(result == "5,6,7,8,9,10,"){
+							snppedelemt = "8";	
+						}else if(result == "7,8,9,10,11,"){
+							snppedelemt = "9";	
+						}else if(result == "7,8,9,10,11,12,"){
+							snppedelemt = "10";	
+						}else if(result == "9,11,"){
+							snppedelemt = "11";	
+						}else if(result == "9,10,11,12,"){
+							snppedelemt = "12";	
+						}
+
+					$("#results").html("Snapped to: " + (result === '' ? "Nothing!" : result));
+				}
 			});
 		});
+
 		</script>
 	</head>
 	<body>
 		<!-- HTML -->
 		<div style="float:left">
 		    <div class="square">
-		      <input></input> <input></input>
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
 		    </div>
-		    <div class="square">2</div>
-		    <div class="square">3</div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div style="clear:both"></div>
-		    <div class="square">4</div>
-		    <div class="square">5</div>
-		    <div class="square">6</div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div style="clear:both"></div>
-		    <div class="square">7</div>
-		    <div class="square">8</div>
-		    <div class="square">9</div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+		    <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		</div>
 		<div style="float:left;margin-left:50px;">
 		    <div class="squaredotted">1</div>
 		    <div class="squaredotted">2</div>
-		    <div class="squaredotted">3</div>
 		    <div style="clear:both"></div>
+		    <div class="squaredotted">3</div>
 		    <div class="squaredotted">4</div>
+		    <div style="clear:both"></div>
 		    <div class="squaredotted">5</div>
 		    <div class="squaredotted">6</div>
 		    <div style="clear:both"></div>
 		    <div class="squaredotted">7</div>
 		    <div class="squaredotted">8</div>
+		    <div style="clear:both"></div>
 		    <div class="squaredotted">9</div>
+		    <div class="squaredotted">10</div>
+		    <div style="clear:both"></div>
+		    <div class="squaredotted">11</div>
+		    <div class="squaredotted">12</div>
+		    <div style="clear:both"></div>
+		    <input name="leftWeight" readonly="readonly" style="margin-left: 5px; width: 80px" type="number"></input>
+		    <input name="rightWeight" readonly="readonly" style="margin-left: 5px; width: 80px" type="number"></input>
 		</div>
+		<div id="results">qwdqwd</div>
 	</body>
 </html>
