--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		    height: 80px;
 		    line-height: 80px;
 		    border: 1px dotted gray;
-		    margin-bottom: 30px;
-		    margin-left: 30px;
+		    margin-bottom: 50px;
+		    margin-left: 50px;
 		    text-align: center;
 		    float: left;
 		    color: gray;
@@ -54,7 +54,6 @@
 		    margin-bottom: 5px;
 		}
 		.weigth {
-		    type: "number";
 		    width: 70px;
 		    margin-top: 5px;
 		    margin-bottom: 5px;
@@ -76,41 +75,48 @@
 					});
 
 					/* Display the results: */
-					var result= '';
+					var result = [];
 					$.each(snappedTo, function(idx, item) {
-					    result += $(item).text() + ", ";
+					    result.push($(item).text());
 					});
-					var snppedelemt = '';					
-					if(result == "1,2,3,") {
-         					snppedelemt = "1";			
-         				}else if(result == "1,2,3,4,"){
-							snppedelemt = "2";	
-						}else if(result == "1,2,3,4,5,"){
-							snppedelemt = "3";	
-						}else if(result == "1,2,3,4,5,6,"){
-							snppedelemt = "4";	
-						}else if(result == "3,4,5,6,7,"){
-							snppedelemt = "5";	
-						}else if(result == "3,4,5,6,7,8,"){
-							snppedelemt = "6";	
-						}else if(result == "5,6,7,8,9,"){
-							snppedelemt = "7";	
-						}else if(result == "5,6,7,8,9,10,"){
-							snppedelemt = "8";	
-						}else if(result == "7,8,9,10,11,"){
-							snppedelemt = "9";	
-						}else if(result == "7,8,9,10,11,12,"){
-							snppedelemt = "10";	
-						}else if(result == "9,11,"){
-							snppedelemt = "11";	
-						}else if(result == "9,10,11,12,"){
-							snppedelemt = "12";	
-						}
-
-					$("#results").html("Snapped to: " + (result === '' ? "Nothing!" : result));
-				}
-			});
+               console.log("current_number: " + $(this).data("current_number"));
+               if(result.length == 0){
+                  if($(this).data("current_number") == "1" || $(this).data("current_number") == "3" || $(this).data("current_number") == "5" || $(this).data("current_number") == "7" || $(this).data("current_number") == "9" || $(this).data("current_number") == "11") {
+                     document.getElementById("leftWeight").value = parseFloat(document.getElementById("leftWeight").value) - parseFloat($(this).find("input")[1].value);
+                     console.log("1");
+                  }
+                  if($(this).data("current_number") == "2" || $(this).data("current_number") == "4" || $(this).data("current_number") == "6" || $(this).data("current_number") == "8" || $(this).data("current_number") == "10" || $(this).data("current_number") == "12") {
+                     document.getElementById("rightWeight").value = parseFloat(document.getElementById("rightWeight").value) - parseFloat($(this).find("input")[1].value);
+                     console.log("2");
+                  }
+                  $(this).data("current_number", 0);
+               }else if (result.length == 1) {
+                  if($(this).data("current_number") == undefined || $(this).data("current_number") == 0) {
+                     if(result[0] == "1" || result[0] == "3" || result[0] == "5" || result[0] == "7" || result[0] == "9" || result[0] == "11") {
+                        document.getElementById("leftWeight").value = parseFloat(document.getElementById("leftWeight").value) + parseFloat($(this).find("input")[1].value);
+                        console.log("3");
+                     }
+                     if(result[0] == "2" || result[0] == "4" || result[0] == "6" || result[0] == "8" || result[0] == "10" || result[0] == "12") {
+                        document.getElementById("rightWeight").value = parseFloat(document.getElementById("rightWeight").value) + parseFloat($(this).find("input")[1].value);
+                        console.log("4");
+                     }
+                  }
+               }
+               $(this).data("current_number", result);
+               $("#results").html("Snapped to: " + (result === '' ? "Nothing!" : result));
+            }
+         });
 		});
+      function snapToMiddle(dragger, target){
+         var topMove = target.position().top - dragger.data('position').top + (target.outerHeight(true) - dragger.outerHeight(true)) / 2;
+         var leftMove= target.position().left - dragger.data('position').left + (target.outerWidth(true) - dragger.outerWidth(true)) / 2;
+         dragger.animate({top:topMove,left:leftMove},{duration:600,easing:'easeOutBack'});
+      }
+      $('.spaces').find('div').droppable({
+         drop:function(event, ui){
+             snapToMiddle(ui.draggable,$(this));
+         }
+     });
 
 		</script>
 	</head>
@@ -216,7 +222,7 @@
 		      <input type="number" class="weigth" value="80"></input>
 		    </div>
 		</div>
-		<div style="float:left;margin-left:50px;">
+		<div class="spaces" style="float:left;margin-left:50px;">
 		    <div class="squaredotted">1</div>
 		    <div class="squaredotted">2</div>
 		    <div style="clear:both"></div>
@@ -235,8 +241,8 @@
 		    <div class="squaredotted">11</div>
 		    <div class="squaredotted">12</div>
 		    <div style="clear:both"></div>
-		    <input name="leftWeight" readonly="readonly" style="margin-left: 5px; width: 80px" type="number"></input>
-		    <input name="rightWeight" readonly="readonly" style="margin-left: 5px; width: 80px" type="number"></input>
+		    <input id="leftWeight" readonly="readonly" style="margin-left: 50px; width: 80px" type="number" value=0></input>
+		    <input id="rightWeight" readonly="readonly" style="margin-left: 50px; width: 80px" type="number" value=0></input>
 		</div>
 		<div id="results">qwdqwd</div>
 	</body>
