--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		    height: 80px;
 		    line-height: 80px;
 		    border: 1px solid black;
-		    margin-bottom: 5px;
-		    margin-left: 5px;
+		    margin-bottom: 50px;
+		    margin-left: 50px;
 		    text-align: center;
 		    float: left;
 		    background-color: lightblue;
@@ -33,6 +33,30 @@
 		    color: gray;
 		    background-color: lightgray;
 		}
+      .blank {
+		    width: 80px;
+		    height: 80px;
+		    line-height: 80px;
+		    border: 1px white;
+		    margin-bottom: 50px;
+		    margin-left: 50px;
+		    text-align: center;
+		    float: left;
+		    color: white;
+		    background-color: white;
+		}
+      .blank_small {
+		    width: 80px;
+		    height: 40px;
+		    line-height: 80px;
+		    border: 1px white;
+		    margin-bottom: 5px;
+		    margin-left: 50px;
+		    text-align: center;
+		    float: left;
+		    color: white;
+		    background-color: white;
+		}
 		</style>
 		<style type="text/css">
 		.name {
@@ -47,24 +71,14 @@
 		}		
 		</style>
 
-		<style type="text/css">
-		.name {
-		    width: 70px;
-		    margin-top: 5px;
-		    margin-bottom: 5px;
-		}
-		.weigth {
-		    width: 70px;
-		    margin-top: 5px;
-		    margin-bottom: 5px;
-		}		
-		</style>
 		<!-- Javascript -->
 		<script>
 		$(function () {
 			$(".square").draggable({
 				snap: ".squaredotted",
 				snapMode: "inner",
+            snapTolerance: 10,
+
 				stop: function(event, ui) { 
 					/* Get the possible snap targets: */
 					var snapped = $(this).data('ui-draggable').snapElements;
@@ -100,10 +114,18 @@
                         document.getElementById("rightWeight").value = parseFloat(document.getElementById("rightWeight").value) + parseFloat($(this).find("input")[1].value);
                         console.log("4");
                      }
+                  }else if((result[0] == "2" || result[0] == "4" || result[0] == "6" || result[0] == "8" || result[0] == "10" || result[0] == "12") && ($(this).data("current_number") == "1" || $(this).data("current_number") == "3" || $(this).data("current_number") == "5" || $(this).data("current_number") == "7" || $(this).data("current_number") == "9" || $(this).data("current_number") == "11")){
+                     document.getElementById("leftWeight").value = parseFloat(document.getElementById("leftWeight").value) - parseFloat($(this).find("input")[1].value);
+                     document.getElementById("rightWeight").value = parseFloat(document.getElementById("rightWeight").value) + parseFloat($(this).find("input")[1].value);
+                     console.log("5");
+                  }else if((result[0] == "1" || result[0] == "3" || result[0] == "5" || result[0] == "7" || result[0] == "9" || result[0] == "11") && ($(this).data("current_number") == "2" || $(this).data("current_number") == "4" || $(this).data("current_number") == "6" || $(this).data("current_number") == "8" || $(this).data("current_number") == "10" || $(this).data("current_number") == "12")){
+                     document.getElementById("rightWeight").value = parseFloat(document.getElementById("rightWeight").value) - parseFloat($(this).find("input")[1].value);
+                     document.getElementById("leftWeight").value = parseFloat(document.getElementById("leftWeight").value) + parseFloat($(this).find("input")[1].value);
+                     console.log("6");
                   }
+                  $(this).data("current_number", result);
                }
-               $(this).data("current_number", result);
-               $("#results").html("Snapped to: " + (result === '' ? "Nothing!" : result));
+               console.log("result:" + result)
             }
          });
 		});
@@ -121,128 +143,105 @@
 		</script>
 	</head>
 	<body>
-		<!-- HTML -->
-		<div style="float:left">
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div style="clear:both"></div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div style="clear:both"></div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		    <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-		</div>
 		<div class="spaces" style="float:left;margin-left:50px;">
+         <div class="blank_small"></div>
+         <input id="leftWeight" readonly="readonly" style="margin-left: 50px; width: 80px" type="number" value=0></input>
+         <input id="rightWeight" readonly="readonly" style="margin-left: 180px; width: 80px" type="number" value=0></input>
+         
+         <div style="clear:both"></div>
+         <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div class="squaredotted">1</div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div class="squaredotted">2</div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div style="clear:both"></div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div class="squaredotted">3</div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div class="squaredotted">4</div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div style="clear:both"></div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div class="squaredotted">5</div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div class="squaredotted">6</div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div style="clear:both"></div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div class="squaredotted">7</div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div class="squaredotted">8</div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div style="clear:both"></div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div class="squaredotted">9</div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div class="squaredotted">10</div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div style="clear:both"></div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div class="squaredotted">11</div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
 		    <div class="squaredotted">12</div>
-		    <div style="clear:both"></div>
-		    <input id="leftWeight" readonly="readonly" style="margin-left: 50px; width: 80px" type="number" value=0></input>
-		    <input id="rightWeight" readonly="readonly" style="margin-left: 50px; width: 80px" type="number" value=0></input>
-		</div>
+          <div class="square">
+		      <input class="name" value="郭佬"></input>
+		      <input type="number" class="weigth" value="80"></input>
+		    </div>
+          <div class="square">
+		      <input value="郭佬"></input>
+		      <input type="number" value="80"></input>
+		    </div>
+         </div>
 	</body>
 </html>
