--- a/index.html
+++ b/index.html
@@ -58,18 +58,6 @@
 		    background-color: white;
 		}
 		</style>
-		<style type="text/css">
-		.name {
-		    width: 70px;
-		    margin-top: 5px;
-		    margin-bottom: 5px;
-		}
-		.weigth {
-		    width: 70px;
-		    margin-top: 5px;
-		    margin-bottom: 5px;
-		}		
-		</style>
 
 		<!-- Javascript -->
 		<script>
@@ -145,102 +133,98 @@
 	<body>
 		<div class="spaces" style="float:left;margin-left:50px;">
          <div class="blank_small"></div>
-         <input id="leftWeight" readonly="readonly" style="margin-left: 50px; width: 80px" type="number" value=0></input>
-         <input id="rightWeight" readonly="readonly" style="margin-left: 180px; width: 80px" type="number" value=0></input>
+         <input id="leftWeight" readonly="readonly" style="margin-left: 50px; width: 80px" type="tel" value=0></input>
+         <input id="rightWeight" readonly="readonly" style="margin-left: 180px; width: 80px" type="tel" value=0></input>
          
          <div style="clear:both"></div>
          <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">1</div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">2</div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">3</div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">4</div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">5</div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">6</div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">7</div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">8</div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">9</div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">10</div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">11</div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">12</div>
           <div class="square">
-		      <input class="name" value="郭佬"></input>
-		      <input type="number" class="weigth" value="80"></input>
-		    </div>
-          <div class="square">
-		      <input value="郭佬"></input>
-		      <input type="number" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
          </div>
 	</body>
