--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 		.square {
 		    width: 80px;
 		    height: 80px;
-		    line-height: 80px;
 		    border: 1px solid black;
 		    margin-bottom: 50px;
 		    margin-left: 50px;
@@ -227,5 +226,13 @@
 		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
          </div>
+         <div class="square">
+		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		    </div>
+          <div class="square">
+		      <input value="郭佬"></input>
+		      <input type="tel" value="80"></input>
+		    </div>
 	</body>
 </html>
