--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			$(".square").draggable({
 				snap: ".squaredotted",
 				snapMode: "inner",
-            snapTolerance: 10,
+            snapTolerance: 30,
 
 				stop: function(event, ui) { 
 					/* Get the possible snap targets: */
@@ -137,99 +137,95 @@
          
          <div style="clear:both"></div>
          <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">1</div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">2</div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">3</div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">4</div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">5</div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">6</div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">7</div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">8</div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">9</div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">10</div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div style="clear:both"></div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">11</div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
 		    <div class="squaredotted">12</div>
           <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" value="郭佬"></input>
+		      <input style="width: 70px; margin-top: 5px;z-index:999;" type="tel" value="80"></input>
 		    </div>
          </div>
-         <div class="square">
-		      <input style="width: 70px; margin-top: 5px;" value="郭佬"></input>
-		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
-		    </div>
           <div class="square">
 		      <input value="郭佬"></input>
 		      <input type="tel" value="80"></input>
