--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 		<link rel="stylesheet" href="https://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
 		<script type="text/javascript" src="https://code.jquery.com/jquery.min.js"></script>
 		<script type="text/javascript" src="https://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
-	
+		<script src="jquery.ui.touch-punch.min.js"></script>
 		<!-- CSS -->
 		<style type="text/css">
 		.square {
@@ -226,7 +225,7 @@
          </div>
           <div class="square">
 		      <input value="郭佬"></input>
-		      <input type="tel" value="8210"></input>
+		      <input type="tel" value="80"></input>
 		    </div>
 	</body>
 </html>
