--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 		    color: white;
 		    background-color: white;
 		}
+      @media only screen and
+      (min-device-width : screen px) and
+      (max-device-width : screen px) {
+         #id{style}
+      }
 		</style>
 
 		<!-- Javascript -->
