--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="https://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 		<script src="jquery.ui.touch-punch.min.js"></script>
+
 		<!-- CSS -->
 		<style type="text/css">
+      body {
+         transform: scale(1.5);
+         transform-origin: 0 0;
+      }
 		.square {
 		    width: 80px;
 		    height: 80px;
