--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="https://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 		<script src="jquery.ui.touch-punch.min.js"></script>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!-- CSS -->
 		<style type="text/css">
